testing something different

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         </section>
         <section class="col-8 form-group">
 
-          <textarea class="form-control bg-transparent border-0" id="textArea9" name="text9am" placeholder="add note here" rows="1" id="userNotes">
+          <textarea class="form-control bg-transparent border-0" id="textArea9" name="text9am" placeholder="add note here" rows="1" id="myTextArea">
           </textarea>
 
         </section>
   
         <div class="col-2 saveBtn">
-          <button onclick='setItem(this)' data-num="9" type="submit" class="btn btn-primary mb-2">
-            <i class="fa fa-floppy-o" aria-hidden="true"></i>
+          <button onclick="mySave()" data-num="9" type="submit" class="btn btn-primary mb-2">
+            Save
           </button>
         </div>
       </div>
