--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p class="smiley"><i class="fa fa-smile-o" aria-hidden="true"></i></p>
-    <p id="currentTime"></p>
+
     <p id="currentDay"></p>
+
   </header>
 
   <section class="container text-right scheduler">
@@ -162,7 +163,7 @@
     <!--4pm end-->
 
     <!--5pm start-->
-    <section class="row row17">
+    <section class="row row17 mb-5">
 
       <section class="input-container input-group col-1 hour">5 pm
       </section>
