--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/assets/style.css" />
   <title>Work Day Scheduler</title>
 </head>
 <script src="https://use.fontawesome.com/bec0d899fe.js"></script>
@@ -34,7 +34,7 @@
 
         <textarea id="text9AM" class="form-control description" rows="1" style="resize:none" name="9"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
             alt="Save This Note For 9 am"></i></button>
 
       </section>
@@ -51,7 +51,7 @@
 
         <textarea id="text10AM" class="form-control description" rows="1" style="resize:none" name="10"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
             alt="Save This Note for 10am"></i></button>
 
       </section>
@@ -70,7 +70,7 @@
 
         <textarea id="text11AM" class="form-control description" rows="1" style="resize:none" name="11"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
             alt="Save This Note for 11am"></i></button>
 
       </section>
@@ -87,7 +87,7 @@
 
         <textarea id="text12PM" class="form-control description" rows="1" style="resize:none" name="12"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
             alt="Save This Note for 12pm"></i></button>
 
       </section>
@@ -104,7 +104,7 @@
 
         <textarea id="text1PM" class="form-control description" rows="1" style="resize:none" name="13"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
             alt="Save This Note for 1pm"></i></button>
 
       </section>
@@ -121,7 +121,7 @@
 
         <textarea id="text2PM" class="form-control description" rows="1" style="resize:none" name="14"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
             alt="Save This Note for 2pm"></i></button>
 
       </section>
@@ -138,7 +138,7 @@
 
         <textarea id="text3PM" class="form-control description" rows="1" style="resize:none" name="15"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
             alt="Save This Note for 3pm"></i></button>
 
       </section>
@@ -155,7 +155,7 @@
 
         <textarea id="text4PM" class="form-control description" rows="1" style="resize:none" name="16"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
             alt="Save This Note for 4pm"></i></button>
 
       </section>
@@ -172,7 +172,7 @@
 
         <textarea id="text5PM" class="form-control description" rows="1" style="resize:none" name="17"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
             alt="Save This Note for 5pm"></i></button>
 
       </section>
@@ -184,7 +184,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="script.js"></script>
+  <script src="/assets/script.js"></script>
 </body>
 
 </html>
