--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="assets/style.css" />
   <title>Work Day Scheduler</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
 <script src="https://use.fontawesome.com/bec0d899fe.js"></script>
+
 
 <body>
   <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p class="smiley"><i class="fa fa-smile-o" aria-hidden="true"></i></p>
-
     <p id="currentDay"></p>
-
   </header>
 
   <section class="container text-right scheduler">
@@ -27,14 +31,14 @@
     <!--9am start-->
     <section class="row row9">
 
-      <section class="input-container input-group col-1 hour">9 am
+      <section class="input-container input-group col-1 hour">9 AM
       </section>
 
       <section class="input-group col-10 form-group time-block">
 
         <textarea id="text9AM" class="form-control description" rows="1" style="resize:none" name="9"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o fa-2x" aria-hidden="true"
             alt="Save This Note For 9 am"></i></button>
 
       </section>
@@ -44,14 +48,14 @@
     <!--10am start-->
     <section class="row row10">
 
-      <section class="input-container input-group col-1 hour">10 am
+      <section class="input-container input-group col-1 hour">10 AM
       </section>
 
       <section class="input-group col-10 form-group time-block">
 
         <textarea id="text10AM" class="form-control description" rows="1" style="resize:none" name="10"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o fa-2x" aria-hidden="true"
             alt="Save This Note for 10am"></i></button>
 
       </section>
@@ -63,14 +67,14 @@
     <!--11am start-->
     <section class="row row11">
 
-      <section class="input-container input-group col-1 hour">11 am
+      <section class="input-container input-group col-1 hour">11 AM
       </section>
 
       <section class="input-group col-10 form-group time-block">
 
         <textarea id="text11AM" class="form-control description" rows="1" style="resize:none" name="11"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o fa-2x" aria-hidden="true"
             alt="Save This Note for 11am"></i></button>
 
       </section>
@@ -80,14 +84,14 @@
     <!--12pm start-->
     <section class="row row12">
 
-      <section class="input-container input-group col-1 hour">12 pm
+      <section class="input-container input-group col-1 hour">12 PM
       </section>
 
       <section class="input-group col-10 form-group time-block">
 
         <textarea id="text12PM" class="form-control description" rows="1" style="resize:none" name="12"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o fa-2x" aria-hidden="true"
             alt="Save This Note for 12pm"></i></button>
 
       </section>
@@ -97,14 +101,14 @@
     <!--1pm start-->
     <section class="row row13">
 
-      <section class="input-container input-group col-1 hour">1 pm
+      <section class="input-container input-group col-1 hour">1 PM
       </section>
 
       <section class="input-group col-10 form-group time-block">
 
         <textarea id="text1PM" class="form-control description" rows="1" style="resize:none" name="13"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o fa-2x" aria-hidden="true"
             alt="Save This Note for 1pm"></i></button>
 
       </section>
@@ -114,14 +118,14 @@
     <!--2pm start-->
     <section class="row row14">
 
-      <section class="input-container input-group col-1 hour">2 pm
+      <section class="input-container input-group col-1 hour">2 PM
       </section>
 
       <section class="input-group col-10 form-group time-block">
 
         <textarea id="text2PM" class="form-control description" rows="1" style="resize:none" name="14"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o fa-2x" aria-hidden="true"
             alt="Save This Note for 2pm"></i></button>
 
       </section>
@@ -131,14 +135,14 @@
     <!--3pm start-->
     <section class="row row15">
 
-      <section class="input-container input-group col-1 hour">3 pm
+      <section class="input-container input-group col-1 hour">3 PM
       </section>
 
       <section class="input-group col-10 form-group time-block">
 
         <textarea id="text3PM" class="form-control description" rows="1" style="resize:none" name="15"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o fa-2x" aria-hidden="true"
             alt="Save This Note for 3pm"></i></button>
 
       </section>
@@ -148,14 +152,14 @@
     <!--4pm start-->
     <section class="row row16">
 
-      <section class="input-container input-group col-1 hour">4 pm
+      <section class="input-container input-group col-1 hour">4 PM
       </section>
 
       <section class="input-group col-10 form-group time-block">
 
         <textarea id="text4PM" class="form-control description" rows="1" style="resize:none" name="16"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o fa-2x" aria-hidden="true"
             alt="Save This Note for 4pm"></i></button>
 
       </section>
@@ -165,14 +169,14 @@
     <!--5pm start-->
     <section class="row row17 mb-5">
 
-      <section class="input-container input-group col-1 hour">5 pm
+      <section class="input-container input-group col-1 hour">5 PM
       </section>
 
       <section class="input-group col-10 form-group time-block">
 
         <textarea id="text5PM" class="form-control description" rows="1" style="resize:none" name="17"></textarea>
 
-        <button class="col-1 btn saveBtn"><i class="fa fa-calendar-plus-o" aria-hidden="true"
+        <button class="col-1 btn saveBtn"><i class="fa fa-bookmark-o fa-2x" aria-hidden="true"
             alt="Save This Note for 5pm"></i></button>
 
       </section>
